Basic parallax structure created.
Also fixed the prettier settings and husky rules.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,9 @@
         "sourceType": "module"
     },
     "rules": {
-        "prettier/prettier": "error",
+        "prettier/prettier": ["error", {
+           "endOfLine":"auto"
+         }],
         "no-console": [
             1,
             {
