--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,5 @@
 {
   "hooks": {
-    "pre-commit": "npm run format && npm run lint && yarn validate && yarn test",
-    "pre-push": "npm run test:coverage"
+    "pre-commit": "npm run format && npm run lint && yarn validate",
   }
 }
