--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.8.5",
-    "gatsby-image": "^2.1.2",
+    "gatsby": "^2.13.59",
+    "gatsby-image": "^2.2.8",
     "gatsby-plugin-env-variables": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-netlify": "^2.0.17",
-    "gatsby-plugin-offline": "^2.1.1",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.1.3",
-    "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-typescript": "^2.0.15",
-    "gatsby-plugin-typescript-checker": "^1.0.3",
-    "gatsby-source-filesystem": "^2.0.38",
-    "gatsby-transformer-sharp": "^2.1.21",
+    "gatsby-plugin-manifest": "^2.2.5",
+    "gatsby-plugin-netlify": "^2.1.4",
+    "gatsby-plugin-offline": "^2.2.5",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sharp": "^2.2.11",
+    "gatsby-plugin-sitemap": "^2.2.6",
+    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-plugin-typescript-checker": "^1.1.1",
+    "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-source-prismic": "^2.3.0-alpha.3",
+    "gatsby-transformer-sharp": "^2.2.6",
+    "prismic-reactjs": "^1.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
@@ -72,13 +74,10 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "npm run build:storybook && npm run build:gatsby",
+    "build": "npm run build:gatsby",
     "build:gatsby": "gatsby build",
-    "build:storybook": "NODE_ENV=production build-storybook -s static -o static/storybook",
     "develop": "gatsby develop",
-    "develop:storybook": "NODE_ENV=production start-storybook -p 8001 -s static",
     "start": "npm run develop",
-    "start:storybook": "npm run develop:storybook",
     "serve": "gatsby serve",
     "format": "prettier --list-different \"src/**/*.{js,jsx,ts,tsx}\"",
     "validate": "tsc --noEmit",
