--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Hosam Darwish hd.006@hotmail.com",
   "dependencies": {
-    "gatsby": "^2.13.59",
-    "gatsby-image": "^2.2.8",
+    "gatsby": "^2.8.5",
+    "gatsby-image": "^2.1.2",
     "gatsby-plugin-env-variables": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.2.5",
-    "gatsby-plugin-netlify": "^2.1.4",
-    "gatsby-plugin-offline": "^2.2.5",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.11",
-    "gatsby-plugin-sitemap": "^2.2.6",
-    "gatsby-plugin-styled-components": "^3.1.2",
-    "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-plugin-typescript-checker": "^1.1.1",
-    "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-source-prismic": "^2.3.0-alpha.3",
-    "gatsby-transformer-sharp": "^2.2.6",
-    "prismic-reactjs": "^1.3.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-netlify": "^2.0.17",
+    "gatsby-plugin-offline": "^2.1.1",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-robots-txt": "^1.4.0",
+    "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-typescript": "^2.0.15",
+    "gatsby-plugin-typescript-checker": "^1.0.3",
+    "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-source-prismic": "^3.1.4",
+    "gatsby-transformer-sharp": "^2.1.21",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.3.1",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -37,8 +37,8 @@
     "@types/enzyme": "^3.9.3",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.7",
-    "@types/react": "^16.9.36",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/storybook__addon-knobs": "^5.0.1",
     "@types/storybook__react": "^4.0.2",
@@ -57,6 +57,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "gatsby-plugin-tslint": "^0.0.2",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "husky": "^2.4.1",
     "jest": "^24.8.0",
     "jest-styled-components": "^6.3.1",
