--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Hosam Darwish hd.006@hotmail.com",
+  "description": "This website serves as my digital portfolio.",
+  "version": "1.0.0",
+  "author": "Hosam Darwish",
   "dependencies": {
     "gatsby": "^2.8.5",
     "gatsby-image": "^2.1.2",
